if(NOT BOARD)
  message(FATAL_ERROR "BOARD is not defined")
endif()
set(DERI_BSP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${BOARD})
add_library(deri_bsp INTERFACE)
target_include_directories(deri_bsp INTERFACE include)
add_subdirectory(${DERI_BSP_DIR})
target_link_libraries(deri_bsp INTERFACE deri_bsp_${BOARD})
