cmake_minimum_required(VERSION 3.14)
project(desideria_tests)
set(DERI_BASEDIR ${CMAKE_CURRENT_LIST_DIR}/.. CACHE PATH "Path to Desideria source root")
list(APPEND CMAKE_MODULE_PATH "${DERI_BASEDIR}/cmake" "${CMAKE_MODULE_PATH}")
include(desideria)
include(CTest)

add_subdirectory(allocator)
add_subdirectory(minimal)
add_subdirectory(cxxabi)
